--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
 
 
 }
