--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.android.material:material:1.9.0-alpha02'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 
 }
