--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -9,6 +9,14 @@
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
+
+
 
     <application
         android:allowBackup="true"
@@ -18,7 +26,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shuruat1"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Form"
+            android:exported="false" />
         <activity
             android:name=".about1"
             android:exported="false" />
@@ -35,7 +46,7 @@
             android:name=".contact"
             android:exported="false" />
         <activity
-            android:name=".register"
+            android:name=".homepage"
             android:exported="false" />
         <activity
             android:name=".Login"
@@ -44,11 +55,11 @@
             android:name=".about"
             android:exported="false" />
         <activity
-            android:name=".homepage"
+            android:name=".register"
             android:exported="false" />
         <activity
             android:name=".splash_screen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
