--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-
-
-
 
     <application
         android:allowBackup="true"
@@ -29,6 +25,9 @@
         tools:targetApi="31">
         <activity
             android:name=".Form"
+            android:exported="false" />
+        <activity
+            android:name=".splash_screen"
             android:exported="false" />
         <activity
             android:name=".about1"
@@ -58,7 +57,7 @@
             android:name=".register"
             android:exported="false" />
         <activity
-            android:name=".splash_screen"
+            android:name=".profile"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
