--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/image"
+        android:icon="@drawable/ignite_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shuruat1"
@@ -27,7 +28,10 @@
             android:name=".Form"
             android:exported="false" />
         <activity
-            android:name=".splash_screen"
+            android:name=".profile"
+            android:exported="false" />
+        <activity
+            android:name=".register"
             android:exported="false" />
         <activity
             android:name=".about1"
@@ -54,10 +58,10 @@
             android:name=".about"
             android:exported="false" />
         <activity
-            android:name=".register"
+            android:name=".phoneauth"
             android:exported="false" />
         <activity
-            android:name=".profile"
+            android:name=".splash_screen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
