--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shuruat1"
         tools:targetApi="31">
+        <activity
+            android:name=".forgot_pass"
+            android:exported="false" />
+        <activity
+            android:name=".intro"
+            android:exported="false" />
         <activity
             android:name=".Form"
             android:exported="false" />
@@ -58,7 +65,13 @@
             android:name=".about"
             android:exported="false" />
         <activity
+            android:name=".part1"
+            android:exported="false" />
+        <activity
             android:name=".phoneauth"
+            android:exported="false" />
+        <activity
+            android:name=".Video"
             android:exported="false" />
         <activity
             android:name=".splash_screen"
